<resources>
    <string name="app_name">RM-JBM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_app_version">App Version</string>
    <string name="action_logout">Logout</string>

    <string name="rm">RM</string>
    <string name="menu_home">Home</string>
    <string name="support_us">Support Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="jbm_group">JBM Group</string>
    <string name="app_version">App Version</string>
    <string name="powered_by">Powered By</string>
    <string name="jay_bharat_maruti_ltd">Jay Bharat Maruti Ltd.</string>
    <string name="app_version_name">App Version: 1.0.0 (Net)</string>
    <string name="rm_jbm">RM-JBM</string>
    <string name="raw_material">Raw Material</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="hint_user_id">User ID</string>
    <string name="server_ip">223.30.161.199</string>
    <string name="plat_code">1051</string>
    <!--    <string name="plat_code">1022</string>-->
    <string name="hint_server_ip">Server IP</string>
    <string name="hint_sap_user">SAP User</string>
    <string name="sap_user">pisuper</string>
    <string name="hint_sap_password">SAP Password</string>
    <string name="sap_password">Jbmpi123</string>
    <string name="hint_timeout">Timeout</string>

    <string name="hint_password">Password</string>
    <string name="hint_plant">Plant</string>

    <string name="btn_login">Login</string>
    <string name="btn_reset_server_detail">Reset Server Detail</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="err_msg_user_id">Please enter user id.</string>
    <string name="err_msg_user_password">Please enter user password</string>
    <string name="err_msg_user_plant">Please enter user plant</string>
    <string name="err_msg_server_ip">Please enter server IP</string>
    <string name="err_msg_sap_user">Please enter SAP user</string>
    <string name="err_msg_sap_password">Please enter SAP password</string>
    <string name="material_staging">Material Staging</string>
    <string name="stock_view">Stock View</string>
    <string name="physical_inventory">Physical Inventory</string>
    <string name="please_scan_barcode">Please scan barcode.</string>
    <string name="material_transfer_posting">Material Transfer Posting</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issuing_loc">Issuing Loc.</string>
    <string name="receiving_loc">Receiving Loc.</string>
    <string name="barcode">Barcode</string>
    <string name="scanned_qty">Scanned Qty</string>
    <string name="plant">Plant</string>
    <string name="material_no">Material No.</string>
    <string name="material_code">Material Code</string>
    <string name="material">Material</string>
    <string name="batch_no">Batch No.</string>
    <string name="short_text">Short Text</string>
    <string name="net_qty">Net Qty.</string>
    <string name="available_stock">Available Stock</string>
    <string name="missing_qty">Missing Qty.</string>
    <string name="uom">UOM</string>
    <string name="req_date">Req. Date</string>
    <string name="num_of_pallets">Num of Pallets</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="store_loc">Store Loc.</string>
    <string name="material_desc">Material Desc.</string>
    <string name="total_stocks">Total Stocks</string>
    <string name="batch_number">Batch Number</string>
    <string name="stock">Stock</string>
    <string name="document_list">Document List</string>
    <string name="movement_type">Movement Type</string>
    <string name="to_location">To Location</string>
    <string name="from_location">From Location</string>
    <string name="total_scanned_qty">Total Scanned Qty</string>
    <string name="no_pallet_scan">No. Pallet Scan</string>
    <string name="std_part_qty">Std. Part Qty</string>
    <string name="count">Count :</string>
    <string name="batch">Batch</string>
    <string name="quantity">Quantity</string>
    <string name="our_milestones_are_touchstones">Our milestones are touchstones</string>
    <string name="total_count">Total count :</string>

</resources>