<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSLLRCard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSLLRStoreLoc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:background="@drawable/cell_shape_three"
                        android:padding="@dimen/pad_5dp"
                        android:text="@string/store_loc"
                        android:textColor="@color/blackColor" />

                    <TextView
                        android:id="@+id/tvSLLRBatchNumber"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:background="@drawable/cell_shape_three"
                        android:padding="@dimen/pad_5dp"
                        android:text="@string/batch_number"
                        android:textColor="@color/blackColor" />

                    <TextView
                        android:id="@+id/tvSLLRStock"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@drawable/cell_shape_three"
                        android:padding="@dimen/pad_5dp"
                        android:text="@string/stock"
                        android:textColor="@color/blackColor" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>