<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMMaterialStaging"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_material_staging_24" />

                <TextView
                    android:id="@+id/tvLDMMaterialStaging"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/material_staging"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMStockView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/pad_10dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:src="@drawable/ic_stock_view_24" />

                <TextView
                    android:id="@+id/tvLDMStockView"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_view"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMPhysicalInventory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_physical_inventory_24" />

                <TextView
                    android:id="@+id/tvLDMPhysicalInventory"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physical_inventory"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMMaterialTransferPosting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_material_transfer_posting" />

                <TextView
                    android:id="@+id/tvLDMMaterialTransferPosting"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/material_transfer_posting"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMContactUs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_contact_us_24" />

                <TextView
                    android:id="@+id/tvLDMContactUs"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLDMVersion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_app_version_24" />

                <TextView
                    android:id="@+id/tvLDMVersion"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llLDMLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/pad_10dp"
                    android:src="@drawable/ic_logout_24" />

                <TextView
                    android:id="@+id/tvLDMLogout"
                    style="@style/navItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>